finality.css
/* ... */
 
 /* Top padding */
 .pageWithAbsoluteTabs:not(.noSecondaryNavPage) {
    padding-top: 3.7em !important;
  }

/* --- Detail Page --- */

/* Poster */
.layout-desktop #itemDetailPage .detailImageContainer .card {
  position: fixed;
  top: -5.789em;
  left: 0.7em;
  width: 27em;
  border: 2px solid white;
  border-radius: 5px;
  filter: drop-shadow(0 0 6px rgba(2, 2, 2, 0.95));
}

.layout-desktop .detailImageContainer .card {
  z-index: 3;
}

.layout-desktop #homeTab .cardText.cardTextCentered.cardText-first {
	font-family: inherit;
	text-transform: uppercase;
        font-weight: 700 !important;
margin-bottom: -0.2em;
}

.layout-desktop #homeTab .cardText.cardTextCentered.cardText-secondary {
	font-family: inherit;
}

.layout-desktop #castCollapsible .card.portraitCard {
    border: 2px solid white;
    border-radius: 5px;
}

/* Hide Ribbon */
.layout-desktop .detailPagePrimaryContainer {
    z-index: 2;
    background: transparent;
}

.layout-desktop .detailPagePrimaryContainer {
  position: fixed;
  top: 1em;
  left: 1em;
  width: 60%;
}

.layout-desktop .detailRibbon {
  height: 7.2em;
  margin-top: 13.8em;
}
.layout-desktop .detailPagePrimaryContainer {
  position: fixed;
}

.layout-desktop .itemMiscInfo {
  -webkit-align-items: center;
  align-items: center;
  position: absolute;
  top: -6.95em;
  left: 0.5em;
  opacity: 1;
  font-family: inherit;
  font-weight: 600;
  font-size: 1.5111em;
}

.layout-desktop .itemMiscInfo.itemMiscInfo-secondary {
  position: absolute;
  top: -6.95em;
  left: 59em;
}

.layout-desktop .mainDetailButtons {
  align-items: center;
  display: flex;
  position: fixed;
  top: 21em;
  left: 16.5em;
  font-size: 200%;
  margin: 0;
}

.layout-desktop .detailButton-icon {
  font-size: 1.6em !important;
  height: 1em;
  width: 1em;
}

.layout-desktop .detailButton-icon.play_arrow {
  background: linear-gradient(180deg, rgb(83.529% 0% 0%) 0%, rgb(83.516% 0% 0.001%) 6.25%, rgb(83.425% 0% 0.005%) 12.5%, rgb(83.178% 0% 0.018%) 18.75%, rgb(82.696% 0% 0.043%) 25%, rgb(81.902% 0% 0.084%) 31.25%, rgb(80.717% 0% 0.145%) 37.5%, rgb(79.063% 0% 0.23%) 43.75%, rgb(76.863% 0% 0.343%) 50%, rgb(74.037% 0% 0.489%) 56.25%, rgb(70.509% 0% 0.67%) 62.5%, rgb(66.199% 0% 0.892%) 68.75%, rgb(61.029% 0% 1.158%) 75%, rgb(54.923% 0% 1.472%) 81.25%, rgb(47.8% 0% 1.839%) 87.5%, rgb(39.584% 0% 2.262%) 93.75%, rgb(30.196% 0% 2.745%) 100% );
  border-radius: 10px;
  z-index: -2;
  padding-right: 2.9em;
  padding-left: 0.15em;
}

.layout-desktop .detailButton .detailButton-icon.play_arrow::before {
    color: white;
}

.layout-desktop .detailButton .detailButton-icon.play_arrow::after {
  content: "PLAY NOW";
  font-family: "Exo 2", sans-serif;
  font-style: normal;
  position: fixed;
  top: 30.85em;
  left: 26.8em;
  font-weight: bold;
  font-size: 16pt;
  white-space: nowrap;
  z-index: 2;
}

.layout-desktop .detailButton-icon.explore {
	position: fixed;
	top: 13.549em;
	left: 7.68em;
	font-weight: bold;
	white-space: nowrap;
}

.layout-desktop .detailButton .detailButton-icon.theaters {
    position: fixed;
    top: 13.549em;
	left: 33.9em;
    font-weight: bold;
    font-size: 12pt;
    white-space: nowrap;
	padding-right: 2.4em;
}

.layout-desktop .detailButton .detailButton-icon.check.playstatebutton-icon-unplayed {
  position: fixed;
  top: 13.549em;
  left: 18.5em;
  font-weight: bold;
  white-space: nowrap;
}

.layout-desktop .detailButton .detailButton-icon.check.playstatebutton-icon-played {
    position: fixed;
    top: 13.549em;
	left: 18.5em;
    font-weight: bold;
    white-space: nowrap;
}

.layout-desktop .detailButton .detailButton-icon.favorite {
    position: fixed;
    top: 13.549em;
	left: 23.8em;
    font-weight: bold;
    white-space: nowrap;
}

.layout-desktop .detailButton .detailButton-icon.more_vert {
    position: fixed;
    top: 13.549em;
	left: 29em;
    font-weight: bold;
    font-size: 12pt;
    white-space: nowrap;
}

.layout-desktop .detailButton .detailButton-icon.replay {
    display: none;
}

.layout-desktop .detailButton .detailButton-icon.shuffle {
    display: none;
}

.button-link:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: white;
}

/* Title */

.layout-desktop .itemName.parentNameLast {
  top: -0.6843em !important;
  position: absolute;
  font-size: 10em;
  text-transform: uppercase;
  right: auto;
  left: 3.05em;
  width: 72.6%;
  overflow: hidden;
  white-space: normal;
  line-height: 0.83em;
  max-height: 4em;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 4;
  text-overflow: ellipsis;
  font-family: inherit;
  font-weight: 700 !important;
  font-style: normal;
}

/* Series Air Time */

.layout-desktop #itemDetailPage .detailSectionContent #seriesAirTime {
	position: fixed;
	top: 7.3em;
    left: 23em;
}

.layout-desktop .itemName.infoText.originalTitle {
	position: fixed;
	top: 3.415em;
    left: 39.74em;
	font-size: 1.252em;
}

/* Logo */

.detailLogo {
  position: fixed;
  left: 34.5em;
  display: block;
  filter: drop-shadow(0 0 10px rgba(2, 2, 2, 0.95));
  width: 76.9em;
  height: 25em;
  margin-top: 0em;
  margin-bottom: 0em;
  padding: 0;
  top: 10em;
}

.layout-desktop .itemName.parentNameLast {
	display: none;
}

/* Hide Tags */
.itemTags {
    display: none;
}

/* Tagline */
#itemDetailPage .tagline {
  font-weight: 600;
  margin-bottom: 0.8em;
  font-size: 1.82em;
  margin-top: -0.1em;
}

/* Description */

body {
  font-family: "Exo 2", sans-serif;
  font-weight: 400;
  font-style: normal;
}
.layout-desktop .detailPagePrimaryContent {
  position: fixed;
  top: 50.1em;
  left: 32.7em;
  max-width: 61.5%;
  font-size: 11pt;
}

@media (min-width: 40em) {
  .detail-clamp-text {
    -webkit-line-clamp: 4;
    font-size: 1.1em;
	margin-top: -0.35em;
  }
}

.layout-desktop .dialog {
	background: #000;
}

.layout-desktop .listItem.listItem-button.actionSheetMenuItem.emby-button {
	opacity: 0.85;
	transition: opacity 0.3s;
}
/* ... */

